tests/miz/fail/parser/fail_parser_operator_declarations_recovery_001.miz
infix_operator(missing_string, left, 80);
infix_operator("+", middle, 80);
infix_operator("+", left 80);
prefix_operator("-", high);
postfix_operator("!", 95;

definition
  infix_operator("*", none, 90);
  prefix_operator("~", 85)
end;

theorem AfterRecovery: thesis;
